Adjust OSGi tests for JDK 11